[package]
name = "oligoscreen_pairwise"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
once_cell = "1.20"
rfd = "0.15"
bio = "2"
mimalloc = { version = "0.1", default-features = false }
